# unarm

./: .gitignore  Cargo.toml  README.md  args.yaml  arm.yaml  rustfmt.toml  thumb.yaml
disasm/: Cargo.toml
disasm/src/: args.rs  defs_uses.rs  disasm.rs  display.rs  fmt.rs  generated.rs  ins.rs  lib.rs  parse.rs  parser.rs  reg_list.rs  types.rs  util.rs
disasm/src/arm/: disasm.rs  generated.rs  mod.rs  parse.rs
disasm/src/thumb/: disasm.rs  generated.rs  mod.rs  parse.rs
disasm/src/v4t/: mod.rs
disasm/src/v4t/arm/: disasm.rs  generated.rs
disasm/src/v4t/thumb/: disasm.rs  generated.rs
disasm/src/v5te/arm/: disasm.rs  generated.rs  mod.rs
disasm/src/v5te/thumb/: disasm.rs  generated.rs
disasm/src/v6/arm/: disasm.rs  generated.rs
disasm/src/v6/thumb/: disasm.rs  generated.rs  mod.rs
disasm/src/v6k/arm/: disasm.rs  generated.rs
disasm/src/v6k/thumb/: disasm.rs  generated.rs
disasm/tests/: test_arm.rs  test_arm_v4t.rs  test_arm_v5te.rs  test_arm_v6.rs  test_arm_v6k.rs  test_branch.rs  test_defs_uses.rs  test_display_options.rs  test_parser.rs  test_sbo_sbz.rs  test_thumb.rs  test_thumb_v4t.rs  test_thumb_v5te.rs  test_thumb_v6.rs  test_thumb_v6k.rs  test_ual.rs  test_versions.rs
fuzz/: Cargo.toml
fuzz/src/: arm.rs  main.rs  thumb.rs
fuzz/src/v4t/: thumb.rs
fuzz/src/v5te/: arm.rs
fuzz/src/v6k/: arm.rs
generator/: Cargo.toml
generator/assets/: isa.yaml
generator/src/: args.rs  disasm.rs  generate.rs  isa.rs  iter.rs  main.rs  search.rs  token.rs  util.rs
generator/src/generate/: args.rs  disasm.rs  mod.rs
generator/src/generate/disasm/: mod.rs
generator/src/isa/: bit_range.rs  cfg.rs  data_type.rs  defs_uses.rs  extension.rs  format.rs  illegal.rs  lookup_table.rs  mod.rs  opcode.rs  option.rs  parse_tree.rs  pattern.rs  syn.rs  version.rs
generator/src/util/: hex_literal.rs  mod.rs  str.rs
specs/: args.yaml  arm.yaml  thumb.yaml
specs/v4t/: arm.yaml  thumb.yaml
specs/v5te/: arm.yaml  thumb.yaml
specs/v6/: arm.yaml  thumb.yaml
specs/v6k/: arm.yaml  thumb.yaml
