[package]
name = "unarm"
version = "1.6.0"
edition = "2021"
authors = ["Aetias <aetias@outlook.com>"]
license = "MIT"
description = "Disassembles ARM instructions"
keywords = ["arm", "disassembler"]
repository = "https://github.com/AetiasHax/unarm"
readme = "../README.md"

[features]
default = ["thumb", "arm", "v4t", "v5te", "v6k"]
thumb = []
arm = []
v4t = []
v5te = []
v6k = []

[dependencies]
