[package]
name = "unarm"
version = "2.1.0"
edition = "2024"
authors = ["Aetias <aetias@outlook.com>"]
license = "MIT"
description = "Parses ARM instructions"
keywords = ["arm", "disassembler", "parser"]
repository = "https://github.com/AetiasHax/unarm"
readme = "../README.md"
categories = ["no-std"]

[features]
default = [
    "thumb",
    "arm",
    "v4",
    "v4t",
    "v5t",
    "v5te",
    "v5tej",
    "v6",
    "v6k",
    "vfp_v2",
]
thumb = []
arm = []
v4 = []
v4t = []
v5t = []
v5te = []
v5tej = []
v6 = []
v6k = []
vfp_v2 = []
