[package]
name = "unarm-generator"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
indexmap = { version = "2.11", features = ["serde"] }
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
syn = { version = "2.0", features = ["full", "visit-mut"] }
